# AdaptixC2

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  NETWORK_FEATURES_STATUS.md  README.md  docker-compose.yml  pre_install_linux.sh  pre_install_linux_all.sh  pre_install_macos_client.sh
AdaptixClient/: BLOCKING_DIALOGS_FIX_EXAMPLE.md  BLOCKING_DIALOGS_MODIFICATION_SUMMARY.md  CMakeLists.txt  Makefile  build.bat  cmake_install.cmake  db_resaver.py
AdaptixClient/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
AdaptixClient/Headers/: MainAdaptix.h  main.h
AdaptixClient/Headers/Agent/: Agent.h  AgentTableWidgetItem.h  Commander.h  TableWidgetItemAgent.h  Task.h  TaskTableWidgetItem.h
AdaptixClient/Headers/Client/: AuthProfile.h  Extender.h  HttpRequestManager.h  LastTickWorker.h  Requestor.h  Settings.h  Storage.h  TerminalWorker.h  TunnelEndpoint.h  TunnelWorker.h  WebSocketWorker.h  WidgetBuilder.h
AdaptixClient/Headers/Client/AxScript/: AxCommandWrappers.h  AxElementWrappers.h  AxScriptEngine.h  AxScriptManager.h  AxScriptUtils.h  AxScriptWorker.h  AxUiFactory.h  BridgeApp.h  BridgeEvent.h  BridgeForm.h  BridgeMenu.h  BridgeTimer.h
AdaptixClient/Headers/UI/: MainUI.h
AdaptixClient/Headers/UI/Dialogs/: DialogAgent.h  DialogAgentData.h  DialogConnect.h  DialogCredential.h  DialogDownloader.h  DialogExtender.h  DialogListener.h  DialogSaveTask.h  DialogSettings.h  DialogSubscriptions.h  DialogSyncPacket.h  DialogTarget.h  DialogTunnel.h  DialogUploader.h  ProfileListDelegate.h
AdaptixClient/Headers/UI/Graph/: GraphItem.h  GraphItemLink.h  GraphScene.h  LayoutTreeLeft.h  LayoutTreeTop.h  SessionsGraph.h
AdaptixClient/Headers/UI/Widgets/: AbstractDock.h  AdaptixWidget.h  AxConsoleWidget.h  BrowserFilesWidget.h  BrowserProcessWidget.h  ChatWidget.h  ConsoleWidget.h  CredentialsWidget.h  DockWidgetRegister.h  DownloadsWidget.h  ListenersWidget.h  LogsWidget.h  ScreenshotsWidget.h  SessionsTableWidget.h  TargetsWidget.h  TasksWidget.h  TerminalContainerWidget.h  TerminalWidget.h  TunnelsWidget.h  WidgetRegistry.h
AdaptixClient/Headers/Utils/: Convert.h  CustomElements.h  FileSystem.h  FontManager.h  KeyPressHandler.h  Logs.h  NonBlockingDialogs.h  QtFontFix.h  TabNamesUtils.h  TitleBarStyle.h
AdaptixClient/Headers/Workers/: BuildWorker.h  DownloaderWorker.h  LastTickWorker.h  SocksHandshakeWorker.h  TerminalWorker.h  TunnelWorker.h  UploaderWorker.h  WebSocketWorker.h
AdaptixClient/Libs/KDDockWidgets/: kdbindings.cmake  layoutlinter_main.cpp  nlohmann.cmake
AdaptixClient/Libs/Konsole/: Emulation.cpp  Emulation.h  Screen.cpp  Screen.h  ScreenWindow.cpp  ScreenWindow.h  TerminalDisplay.cpp  TerminalDisplay.h  Vt102Emulation.cpp  Vt102Emulation.h  konsole.cpp  konsole.h  res.qrc
AdaptixClient/Libs/Konsole/util/: CharWidth.cpp  CharWidth.h  Character.h  CharacterColor.h  ColorScheme.cpp  ColorScheme.h  Filter.cpp  Filter.h  History.cpp  History.h  HistorySearch.cpp  HistorySearch.h  KeyboardTranslator.cpp  KeyboardTranslator.h  SearchBar.cpp  SearchBar.h  TerminalCharacterDecoder.cpp  TerminalCharacterDecoder.h  utf8proc.c  utf8proc.h
AdaptixClient/Libs/donut/: donut.c  encrypt.c  format.c  hash.c
AdaptixClient/Libs/donut/include/: donut.h  format.h  hash.h  loader_exe_x64.h  loader_exe_x86.h  pe.h  wintypes.h
AdaptixClient/Libs/kddockwidgets/: CMakeLists.txt  KDDockWidgets.cpp  KDDockWidgets.h  Makefile  cmake_install.cmake  kddockwidgets_export.h  nlohmann.cmake
AdaptixClient/Libs/kddockwidgets/core/: DropArea.h  DropIndicatorOverlay.cpp  Group.cpp  Platform.cpp  (+3 more)
AdaptixClient/Libs/qlementine/: CMakeLists.txt
AdaptixClient/Resources/: Resources.qrc
AdaptixClient/Resources/themes/: adaptix_dark.json  adaptix_dark.qss  adaptix_dracula.json  adaptix_dracula.qss  adaptix_light.json  adaptix_light.qss  ax-dark.qss  ax-light.qss  color_nord.css  dark.css  dark.json  dark.qss  dark_ice.json  dark_ice.qss  dracula.json  dracula.qss  fallout.json  fallout.qss  glass_morph.json  glass_morphism.qss  hacker_tech.json  hacker_tech.qss  light_arc.css  light_arc.json  light_arc.qss
AdaptixClient/Source/: MainAdaptix.cpp  main.cpp
AdaptixClient/Source/Agent/: Agent.cpp  AgentTableWidgetItem.cpp  Commander.cpp  TableWidgetItemAgent.cpp  Task.cpp  TaskTableWidgetItem.cpp
AdaptixClient/Source/Client/: AuthProfile.cpp  Extender.cpp  HttpRequestManager.cpp  LastTickWorker.cpp  ProcessSyncPacket.cpp  Requestor.cpp  Settings.cpp  Storage.cpp  TerminalWorker.cpp  TunnelEndpoint.cpp  TunnelWorker.cpp  WebSocketWorker.cpp  WidgetBuilder.cpp
AdaptixClient/Source/UI/: MainUI.cpp
AdaptixClient/Source/Utils/: Convert.cpp  CustomElements.cpp  FileSystem.cpp  FontManager.cpp  Logs.cpp  NonBlockingDialogs.cpp  QtFontFix.cpp  TabNamesUtils.cpp  TitleBarStyle.cpp
AdaptixClient/Source/Workers/: BuildWorker.cpp  DownloaderWorker.cpp  LastTickWorker.cpp  SocksHandshakeWorker.cpp  TerminalWorker.cpp  TunnelWorker.cpp  UploaderWorker.cpp  WebSocketWorker.cpp
Client/: CMakeLists.txt
Client/Headers/: MainAdaptix.h  main.h
Client/Headers/Agent/: Agent.h  Commander.h
Client/Headers/Client/: AuthProfile.h  Extender.h  LastTickWorker.h  Requestor.h  Storage.h  WebSocketWorker.h  WidgetBuilder.h
Client/Headers/UI/: MainUI.h
Client/Headers/Utils/: Convert.h  CustomElements.h  FileSystem.h  Logs.h  Valid.h
Client/Resources/: Resources.qrc
Client/Resources/themes/: dark.css  light_arc.css
Client/Source/: MainAdaptix.cpp  main.cpp
Client/Source/Agent/: Agent.cpp  Commander.cpp
Client/Source/Client/: AuthProfile.cpp  Extender.cpp  ProcessSyncPacket.cpp  Requestor.cpp  Storage.cpp  WebSocketWorker.cpp  WidgetBuilder.cpp
Client/Source/UI/: MainUI.cpp
Client/Source/Utils/: Convert.cpp  CustomElements.cpp  FileSystem.cpp  Logs.cpp  Valid.cpp
ex-soft/AXchecker/: CMakeLists.txt
ex-soft/AXchecker/Headers/: main.h
ex-soft/AXchecker/Resources/: Resources.qrc
ex-soft/AXchecker/Source/: main.cpp
ex-soft/CmdChecker/: CMakeLists.txt
ex-soft/CmdChecker/Headers/: main.h
ex-soft/CmdChecker/Resources/: Resources.qrc
ex-soft/CmdChecker/Source/: main.cpp
(+822 files in other folders)
